Resolve error prone warnings